--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mypetsafe",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "author": "Stefan Simon",
   "main": "lib/mypetsafe.js",
@@ -19,8 +19,7 @@
     "url": "https://github.com/StefanIndustries/node-mypetsafe.git"
   },
   "dependencies": {
-    "axios": "^1.9.0",
-    "@aws-sdk/client-cognito-identity-provider": "^3.817.0"
+    "axios": "^1.9.0"
   },
   "devDependencies": {
     "tsx": "^4.19.4",
